--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,6 +4,8 @@
     <h1>Blog Home</h1>    
     {% for post in posts %}
     <article class="media content-section">
+        <img class="rounted-circle article-img" src="{{ user.profile.image.url }}" /> 
+        <!-- <img class="rounted-circle article-img" src="{{ post.author.profile.image.url }}" />  -->
         <div class="media-body">
             <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.author }}</a>
