--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,20 +2,24 @@
 
 {% block content %}
     <h1>Blog Home</h1>    
-    {% for post in posts %}
     <article class="media content-section">
-        <img class="rounted-circle article-img" src="{{ user.profile.image.url }}" /> 
+        <img class="rounded-circle article-img" src="{{ user.profile.image.url }}" /> 
         <!-- <img class="rounted-circle article-img" src="{{ post.author.profile.image.url }}" />  -->
         <div class="media-body">
             <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.author }}</a>
             <small class="text-muted">{{ post.date_posted }}</small>
+            {% if post.author == user %}
+            <div>
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' post.id %}">Update</a>
+                <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' post.id %}">Delete</a>        
             </div>
-            <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+            {% endif %}
+            </div>
+            <h2 class="article-title">{{ post.title }}</h2>
             <p class="article-content">{{ post.content }}</p>
         </div>
     </article>
         
-    {% endfor %}
 {% endblock content %}
 
