--- a/blog/templates/blog/post_user.html
+++ b/blog/templates/blog/post_user.html
@@ -1,14 +1,14 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-    <h1>Blog Home ({{  page_obj.paginator.count }})</h1>    
+    <h1>Post by: {{ view.kwargs.username }} ({{  page_obj.paginator.count }})</h1>    
     {% for post in posts %}
     <article class="media content-section">
         <img class="rounted-circle article-img" src="{{ user.profile.image.url }}" /> 
         <!-- <img class="rounted-circle article-img" src="{{ post.author.profile.image.url }}" />  -->
         <div class="media-body">
             <div class="article-metadata">
-            <a class="mr-2" href="{% url 'post-user' post.author %}">{{ post.author }}</a>
+            <a class="mr-2" href="#">{{ post.author }}</a>
             <small class="text-muted">{{ post.date_posted }}</small>
             </div>
             <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
