--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,7 +4,7 @@
     <h1>Blog Home</h1>    
     <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ user.profile.image.url }}" /> 
-        <!-- <img class="rounted-circle article-img" src="{{ post.author.profile.image.url }}" />  -->
+        <!-- <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" />  -->
         <div class="media-body">
             <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.author }}</a>
