--- a/blog/templates/blog/post_user.html
+++ b/blog/templates/blog/post_user.html
@@ -4,8 +4,8 @@
     <h1>Post by: {{ view.kwargs.username }} ({{  page_obj.paginator.count }})</h1>    
     {% for post in posts %}
     <article class="media content-section">
-        <img class="rounted-circle article-img" src="{{ user.profile.image.url }}" /> 
-        <!-- <img class="rounted-circle article-img" src="{{ post.author.profile.image.url }}" />  -->
+        <img class="rounded-circle article-img" src="{{ user.profile.image.url }}" /> 
+        <!-- <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" />  -->
         <div class="media-body">
             <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.author }}</a>
